<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_end_game_background"
    tools:context=".PracticeMenu">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.118">

        <Button
            android:id="@+id/add_btn"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/blue_button"
            android:fontFamily="@font/chalkboard"
            android:gravity="center"
            android:onClick="operatorOnClick"
            android:text="@string/addition"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sub_btn"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/green_button"
            android:fontFamily="@font/chalkboard"
            android:gravity="center"
            android:onClick="operatorOnClick"
            android:text="@string/subtraction"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mul_btn"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/yellow_button"
            android:fontFamily="@font/chalkboard"
            android:gravity="center"
            android:onClick="operatorOnClick"
            android:text="@string/multiplication"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/div_btn"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:background="@drawable/red_button"
            android:fontFamily="@font/chalkboard"
            android:gravity="center"
            android:onClick="operatorOnClick"
            android:text="@string/division"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/back_btn"
        android:onClick="backOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="614dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/chalkboard"
        android:gravity="center"
        android:text="@string/whatsubjectswouldyouliketopractice"
        android:textColor="#E46391"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>