<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_end_game_background"
    tools:context=".EndLevel"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="-16dp">

        <ImageView
            android:id="@+id/three_stars_iv"
            android:layout_width="372dp"
            android:layout_height="97dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            ads:srcCompat="@drawable/three_stars" />

        <TextView
            android:id="@+id/answer_iv_end_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bubblegum_sans"
            android:gravity="center"
            android:text="@string/levelpassed"
            android:textColor="#00C130"
            android:textSize="50sp" />

        <Button
            android:id="@+id/menu_btn"
            android:layout_width="178dp"
            android:layout_height="53dp"
            android:background="@drawable/plain_new_game_btn"
            android:fontFamily="@font/chalkboard"
            android:onClick="menuBtnOnClick"
            android:layout_marginBottom="10dp"
            android:text="@string/homepage"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/next_level_btn"
            android:layout_width="178dp"
            android:layout_height="53dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/practice_button_im_no_icon"
            android:fontFamily="@font/chalkboard"
            android:onClick="nextLevelBtnOnCLick"
            android:text="@string/nextlevel"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>