<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_end_game_background"
    android:layoutDirection="ltr"
    tools:context=".Settings"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">


    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/levels_button_im_no_icon"
        android:clickable="true"
        android:fontFamily="@font/chalkboard"
        android:gravity="center"
        android:onClick="confimOnClick"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="549dp"
        android:layout_height="120dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/language_btn"
                android:gravity="center"
                android:onClick="changeLanguge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:fontFamily="@font/chalkboard"
                android:gravity="center"
                android:text="@string/changelanguage"
                android:textColor="#5D1B5D"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/change_diff_btn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/change_subject_btn"
                android:gravity="center"
                android:onClick="changeDifOnClick" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:fontFamily="@font/chalkboard"
                android:gravity="center"
                android:text="@string/changesubjectsanddifficulty"
                android:textColor="#5D1B5D"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/set_timer_btn"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:fontFamily="@font/chalkboard"
                android:gravity="center"
                android:text="@string/SetTimer"
                android:textColor="#5D1B5D"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="179dp"
        android:layout_height="53dp"
        android:fontFamily="@font/chalkboard"
        android:gravity="center"
        android:text="@string/Settings"
        android:textColor="#5D1B5D"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

</android.support.constraint.ConstraintLayout>